# teddy-impl

./: .gitignore  CMakeLists.txt  run.sh  thingstoreadupon.md
src/: CMakeLists.txt
src/cppcode/: canvas.cpp  canvas.h  main.cpp  shader.cpp  shader.h
src/shaders/: mesh.frag  mesh.vert
